Fix navbar button alignment

--- a/assets/css/common/_nav.sass
+++ b/assets/css/common/_nav.sass
@@ -71,8 +71,9 @@
       &.is-white:hover
         border: 1px solid rgba(255, 118, 128, 0.6)
         background-color: transparent
-      &:not(:last-child)
-        margin-right: 2rem
+      +from($navbar-breakpoint)
+        &:not(:last-child)
+          margin-right: 24px
 
     +until($navbar-breakpoint)
       flex-direction: column
